[gd_scene load_steps=9 format=3 uid="uid://bx7dj4d4rlj2b"]

[ext_resource type="Script" path="res://scenes/Menu_Select.gd" id="1_e218o"]
[ext_resource type="Texture2D" uid="uid://cdah7g0gh0w8n" path="res://assets/logo_art/Arcana_White.png" id="2_dd1ic"]
[ext_resource type="Texture2D" uid="uid://duj8wglcnlpbw" path="res://assets/ui_art/Main_menu_screen_No_logo_000.png" id="2_onfr0"]
[ext_resource type="AudioStream" uid="uid://byiv3leiy6f0e" path="res://assets/audio/Prelude.wav" id="3_uihmt"]
[ext_resource type="Texture2D" uid="uid://bwy1y2ev1px74" path="res://assets/ui_art/main-menu.png" id="3_w2jyh"]
[ext_resource type="Texture2D" uid="uid://6gf2d300rww1" path="res://assets/ui_art/Arcana-game-over-03-02.png" id="6_wcqby"]
[ext_resource type="Texture2D" uid="uid://c0lvm2qi5uhaq" path="res://assets/ui_art/vertical-textbox.png" id="7_q2ce0"]
[ext_resource type="Theme" uid="uid://dyhggra4gad0m" path="res://assets/text_dialogue/main_theme.tres" id="8_i8jbg"]

[node name="Menu_Select" type="Node2D"]
script = ExtResource("1_e218o")
volume_value = 50
typespeed = 6

[node name="MainMenuScreenNoLogo000" type="Sprite2D" parent="."]
position = Vector2(360, 640)
scale = Vector2(0.666, 0.666)
texture = ExtResource("2_onfr0")

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="."]
layout_direction = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 720.0
offset_bottom = 1280.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Sprite2D2" type="Sprite2D" parent="."]
position = Vector2(360, 675)
texture = ExtResource("3_w2jyh")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.634
anchor_bottom = 0.5
offset_left = 180.0
offset_top = 561.0
offset_right = 540.0
offset_bottom = 850.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Start" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Start Game"

[node name="Exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Quit
"

[node name="Resume" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Resume
"

[node name="Button3" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Open Settings"

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Volume" type="Label" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Volume - 100"
horizontal_alignment = 1

[node name="VolumeSlider" type="HSlider" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
value = 100.0

[node name="TextSpeed" type="Label" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Text Speed"
horizontal_alignment = 1

[node name="TextSpeedSlider" type="HSlider" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
min_value = 1.0
max_value = 6.0
value = 2.0

[node name="Label" type="Label" parent="."]
offset_left = 304.0
offset_top = 232.0
offset_right = 696.0
offset_bottom = 272.0
text = "Game Demo"

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(352, 112)
texture = ExtResource("2_dd1ic")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_uihmt")
volume_db = -20.0
autoplay = true

[node name="PopupMenuWin" type="PopupMenu" parent="."]
initial_position = 1
size = Vector2i(444, 116)
item_count = 4
item_0/text = "Congratulations!"
item_0/id = 0
item_1/text = "You have succeeded in your quest."
item_1/id = 1
item_2/text = "You are now the main advisor to the lord of the lands."
item_2/id = 2
item_3/text = "Clock this message to close this window."
item_3/id = 3

[node name="GameLose" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = -32.0
offset_right = 16.0
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 2

[node name="Sprite2D" type="Sprite2D" parent="GameLose"]
position = Vector2(352, 384)
scale = Vector2(0.3, 0.3)
texture = ExtResource("6_wcqby")

[node name="Question_Recap" type="AspectRatioContainer" parent="GameLose"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 168.0
offset_top = 616.0
offset_right = 518.0
offset_bottom = 1101.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.003, 1.01109)
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 0

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="GameLose/Question_Recap"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Sprite2D" type="Sprite2D" parent="GameLose/Question_Recap/AspectRatioContainer"]
position = Vector2(173.923, 221.419)
scale = Vector2(1, 0.693161)
texture = ExtResource("7_q2ce0")

[node name="VBoxContainer" type="VBoxContainer" parent="GameLose/Question_Recap/AspectRatioContainer"]
layout_mode = 2

[node name="full_text" type="RichTextLabel" parent="GameLose/Question_Recap/AspectRatioContainer/VBoxContainer"]
custom_minimum_size = Vector2(350, 400)
layout_mode = 2
theme = ExtResource("8_i8jbg")
bbcode_enabled = true
text = "[center][shake]OH NO![/shake]
You have run out of Gold and can no longer afford to continue your quest.

Dare you brave another attempt?
"
fit_content = true

[node name="HBoxContainer" type="HBoxContainer" parent="GameLose/Question_Recap/AspectRatioContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Close" type="Button" parent="GameLose/Question_Recap/AspectRatioContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Close"

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="VBoxContainer/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="GameLose/Question_Recap/AspectRatioContainer/VBoxContainer/HBoxContainer/Close" to="." method="_on_close_pressed"]
